@@ -31,6 +31,7 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 AM_ICONV
 
+AC_LIBTOOL_DLOPEN
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
