@@ -7,6 +7,7 @@ jabberd_SOURCES = jabberd.c static.c
 
 jabberd_LDADD = $(top_builddir)/jabberd/base/libjabberdbase.la \
 		$(top_builddir)/jabberd/libjabberd.la
+jabberd_LDFLAGS = @LDFLAGS@ -export-dynamic
 
 noinst_HEADERS = single.h
 
@@ -19,4 +20,5 @@ EXTRA_DIST = README README.CONFIG README.SM
 lib_LTLIBRARIES = libjabberd.la
 
 libjabberd_la_SOURCES = config.c heartbeat.c load.c mio.c mio_ssl.c mtq.c xdb.c deliver.c log.c mio_raw.c mio_xml.c
-libjabberd_la_LIBADD = @LDFLAGS@ -lexpat $(top_builddir)/jabberd/lib/libjabberdlib.la
+libjabberd_la_LIBADD = -lexpat $(top_builddir)/jabberd/lib/libjabberdlib.la
+libjabberd_la_LDFLAGS = @LDFLAGS@ -export-dynamic
